@@ -44,4 +44,5 @@ vc6
 hang
 null
 null2
+setnull
 
