@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.42 2007/11/27 15:14:25 freddy77 Exp $
+# $Id: Makefile.am,v 1.43 2007/12/03 09:20:10 freddy77 Exp $
 TESTS		=	t0001$(EXEEXT) t0002$(EXEEXT) t0003$(EXEEXT)\
 			t0004$(EXEEXT) t0005$(EXEEXT) t0006$(EXEEXT)\
 			t0007$(EXEEXT) t0008$(EXEEXT) t0009$(EXEEXT)\
@@ -9,7 +9,8 @@ TESTS		=	t0001$(EXEEXT) t0002$(EXEEXT) t0003$(EXEEXT)\
 			t0023$(EXEEXT) rpc$(EXEEXT) dbmorecmds$(EXEEXT)\
 			bcp$(EXEEXT) thread$(EXEEXT) text_buffer$(EXEEXT)\
 			done_handling$(EXEEXT) timeout$(EXEEXT) \
-			hang$(EXEEXT) null$(EXEEXT) null2$(EXEEXT)
+			hang$(EXEEXT) null$(EXEEXT) null2$(EXEEXT) \
+			setnull$(EXEEXT)
 check_PROGRAMS	=	$(TESTS)
 
 t0001_SOURCES	=	t0001.c common.c common.h
@@ -44,6 +45,7 @@ timeout_SOURCES =	timeout.c common.c common.h
 hang_SOURCES	=	hang.c common.c common.h
 null_SOURCES	=	null.c common.c common.h
 null2_SOURCES	=	null2.c common.c common.h
+setnull_SOURCES	=	setnull.c common.c common.h
 
 AM_CPPFLAGS	= 	-DFREETDS_SRCDIR=\"$(srcdir)\" -I$(top_srcdir)/include
 if MINGW32
