@@ -1,14 +1,19 @@
+Mon Dec  3 10:18:39 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/dblib.c src/dblib/unittests/.cvsignore:
+	* src/dblib/unittests/Makefile.am src/dblib/unittests/setnull.c(added):
+	- add a test for setnull
+
 Sun Dec  2 17:58:40 EST 2007	JK Lowden <jklowden@freetds.org>
 	* doc/api_status.txt
 	* include/dblib.h include/sybdb.h include/tds.h
 	* src/ctlib/blk.c src/dblib/bcp.c src/dblib/dblib.c
 	- full implementation of dbsetnull().
 	- Replaced _DB_GETCOLINFO macro with dbcolptr(). 
-	
+
 Sat Dec  1 14:05:54 EST 2007	JK Lowden <jklowden@freetds.org>
 	* src/dblib/bcp.c src/dblib/unittests/null.c
 	- correct TDS 5.0 bcp offset table calcuation in presence of NULLs.
- 
+
 Fri Nov 30 09:54:46 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/unittests/common.c: missing new line
 
